Fix spacing of hero banner

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -104,7 +104,7 @@ header {
     display: grid;
     grid-template-columns: 1fr 2fr;
     margin: auto;
-    gap: 0 2em;
+    column-gap: 1em;
     align-items: center;
     & img {
         width: 400px;
@@ -114,7 +114,6 @@ header {
 .hero-text {
     display: grid;
     grid-template-columns: auto;
-    gap: calc(var(--unit)/2);
 }
 
 .slogan {
@@ -261,7 +260,7 @@ footer a {
     color: var(--text);
 }
 
-@media screen and (max-width: 900px) {
+@media (max-width: 900px) {
     header {
         padding: 0;
     }
@@ -270,7 +269,7 @@ footer a {
     }
     .hero-banner {
         grid-template-columns: 1fr;
-        gap: 1em 0;
+        row-gap: 2em;
         padding: 2em;
         align-items: center;
         & img {
